[tool.poetry]
name = "test-pyspark"
version = "0.1.0"
description = ""
authors = ["beachasaurus-rex <jonrizk@protonmail.com>"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dependencies]
python = "<3.12.0,>=3.10"

[tool.poetry.group.dev.dependencies]
pyspark = "~3.5"
pandas = "^1.5.3"
numpy = "<2.0.0,>=1.23.5"
pyarrow = "<13.0.0,>=8.0.0"
py4j = ">=0.10.9.7"

[tool.poetry.group.test.dependencies]
tox = "^4.0"
pytest = "^8.0"
coverage = "^7.6.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true
omit = [
    "__init__.py",
    "test_*.py"
]
